// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text  /> should match snapshot 1`] = `
.c0 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  vertical-align: bottom;
  max-width: 40px;
  display: inline-block;
  cursor: pointer;
  font-family: CircularStd-Book,CircularStd;
  font-weight: 400;
}

.c0:hover {
  font-family: CircularStd-Bold,CircularStd;
  font-weight: 500;
  color: #0054fe;
}

<div
  class="jsx-418573366 tooltip "
>
  <p
    class="jsx-3390086683  c0"
    hovercolor="#0054fe"
    maxwidth="40px"
  >
    <span>
      1234567890
    </span>
  </p>
</div>
`;

exports[`<Text  /> should match snapshot when set maxCount 1`] = `
.c0 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  vertical-align: bottom;
  display: inherit;
  cursor: pointer;
  font-family: CircularStd-Book,CircularStd;
  font-weight: 400;
}

.c0:hover {
  font-family: CircularStd-Bold,CircularStd;
  font-weight: 500;
  color: #0054fe;
}

<div
  class="jsx-418573366 tooltip "
>
  <p
    class="jsx-3390086683  c0"
    hovercolor="#0054fe"
  >
    12345...
  </p>
</div>
`;
